Stable versions
---------------

4.0.2 ():
	- add IT volume column vibrato
	- fix IT instrument vibrato depth and sweep
	- fix period range for values lower than 8

4.0.1 (20130216):
	- fix license issues reported by Jan Engelhardt
	- minor documentation updates

4.0.0 (20130213):
	- split library and application in different packages
	- remove OSS sequencer support
	- remove platform-specific device drivers
	- remove all global data, make library code fully thread-safe
	- remove configuration files (moved to front-end)
	- remove support to uLaw-encoded output
	- remove bogus lzma file detection (by Bodo Thiesen)
	- extend note range to full 10-octave range
	- extensive code refactoring
	- rewrite MMCMP decompressor to be endian-safe
	- replaced IT sample decompressor with public domain version
	- add cubic spline sample interpolation
	- add built-in zip file decompressor
	- add built-in gzip file decompressor
	- add built-in compress file decompressor
	- add built-in bzip2 file decompressor
	- add built-in xz file decompressor
	- add built-in lha file decompressor
	- add built-in vorbis sample decoder
	- add support to IT envelope carry
	- add support to IT sample vibrato
	- add ASYLUM Music Format V1.0 loader
	- add regression tests
	- fix interpolation and sample loop processing
	- fix S404 depacker integration
	- fix note delay effect
	- fix FT2 old instrument volume quirk
	- fix XM tone portamento with finetune (reported by Rakesh Sewgolam)
	- fix instrument envelope loops (Storlek test #24)
	- fix IT tremor effect (Storlek tests #12 and #13)
	- fix IT global volume (Storlek test #16)
	- fix IT stray tone portamento handling (Storlek test #23)
	- fix IT unified pitch slide memory (Storlek test #25)
	- fix IT retrigger effect (Storlek test #15)
	- fix IT filters
	- fix IT fadeout event handling
	- fix persistent slide down effect

3.5.0 (20120127):
	- fix AMF 1.0 module loading (reported by Andre Timmermans), probe
	  for sample loop size