@@ -3,7 +3,9 @@ Stable versions
 
 4.0.2 ():
 	- add IT volume column vibrato
+	- add fine global volume slide effect
 	- fix IT instrument vibrato depth and sweep
+	- fix global volume slides
 	- fix period range for values lower than 8
 
 4.0.1 (20130216):
